--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
-    "typescript": "^4.0.3",
-    "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0"
+    "typescript": "^4.0.5",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.164",
@@ -27,7 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "typescript": "~3.9.3"
+    "typescript": "^4.0.5"
   },
   "vue": {},
   "eslintConfig": {
