--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "c3": "^0.7.20",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-slider-component": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.164",
@@ -26,6 +27,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.14.0",
     "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "typescript": "^4.1.2"
   },
   "vue": {},
