--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "c3": "^0.7.20",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
+    "prettier": "^1.19.1",
     "vue": "^3.0.0",
     "vue-slider-component": "^4.0.0-beta.3"
   },
