--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          cname: ${{ github.repository }}.gh.${{ github.repository_owner }}.com
+          cname: price-calc.gh.${{ github.repository_owner }}.com
