--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.14.0",
+    "eslint": "<7.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
