--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,23 +23,18 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Build
+      - name: Build lib
         run: npm install && npm run-script build
+        working-directory: ./lib
+      
+      - name: Build widget
+        run: npm install && npm run-script build
+        working-directory: ./widget
 
       # Runs a set of commands using the runners shell
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.repository_owner == 'nukemberg'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          cname: scyllacalc.nukemberg.com
-
-      # Runs a set of commands using the runners shell
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        if: github.repository_owner == 'scylladb'
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          cname: price-calc.gh.${{ github.repository_owner }}.com
+          publish_dir: ./widget/dist
+          cname: price-calc.gh.scylladb.com
