--- a/lib/package.json
+++ b/lib/package.json
@@ -6,7 +6,8 @@
   "types": "types/Calculator.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "Apache v2",
