--- a/widget/package.json
+++ b/widget/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-lib": "vue-cli-service build --target lib src/Calculator.vue --name Calculator",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
